<resources>
    <string name="app_name">AndroidGenTue6Fri7</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play">Play</string>
    <string name="leaderboard">Score</string>
    <string name="logout">Logout</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="firstname">Firstname</string>
    <string name="signup">Signup</string>
    <string name="submit">Submit</string>
    <string name="already_having_account">Already Having Account?</string>
    <string name="login">Login</string>
</resources>