<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvSignupTitle"
        android:text="@string/signup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:textSize="25pt"
        android:textStyle="bold|italic"
        />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtSignupFirstName"
            android:layout_below="@+id/tvSignupTitle"
            android:layout_marginTop="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/firstname"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtSignupEmail"
            android:layout_below="@id/edtSignupFirstName"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtSignupPassword"
                android:layout_below="@id/edtSignupEmail"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnSignupSubmit"
                android:text="@string/submit"
                android:layout_below="@id/edtSignupPassword"
                android:layout_marginTop="40dp"
                android:layout_centerHorizontal="true"
                />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSignupLogin"
            android:text="@string/already_having_account"
            android:layout_below="@id/btnSignupSubmit"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:textSize="10pt"

            />

</RelativeLayout>