<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    android:background="@color/grey"
    >



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
             >

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnMenuPlay"
                android:text="@string/play"
                android:background="@drawable/round_button"
                android:backgroundTint="@color/green"
                android:textSize="10pt"
                android:padding="12dp"
                />

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnMenuLeaderboard"
                android:text="@string/leaderboard"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/round_button"
                android:backgroundTint="@color/design_default_color_secondary"
                android:textSize="10pt"
                android:padding="12dp"

                />


            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnMenuLogout"
                android:text="@string/logout"
                android:background="@drawable/round_button"
                android:backgroundTint="@color/red"
                android:textSize="10pt"
                android:padding="12dp"

                />

        </LinearLayout>

</RelativeLayout>